--- a/.github/workflows/prod_main.yml
+++ b/.github/workflows/prod_main.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 20        
       - name: install dependencies
-        run: npm ci 
+        run: npm install
       - name: build the code
         run: npm run build
   test:
@@ -32,7 +32,7 @@ jobs:
         with:
           node-version: 20
       - name: install dependencies
-        run: npm ci 
+        run: npm install
       - name: testing the code
         run: npm run test
   pushtohub:
