--- a/.github/workflows/prod_main.yml
+++ b/.github/workflows/prod_main.yml
@@ -48,8 +48,8 @@ jobs:
         password: ${{ secrets.DOCKERPASS }}
     - name: push to docker hub
       run: |
-        docker build -t ${{ secrets.DOCKERUSER }}/new-app:latest .
-        docker push ${{ secrets.DOCKERUSER }}/new-app:latest
+        docker build -t ${{ secrets.DOCKERUSER }}/react-new:latest .
+        docker push ${{ secrets.DOCKERUSER }}/react-new:latest
         
   deploy:
     runs-on: ubuntu-latest
@@ -63,7 +63,7 @@ jobs:
         key: ${{ secrets.AWS_PEM_KEY }}
         script: |
           docker rm -f $(docker ps -aq) || true
-          docker pull ${{ secrets.DOCKERUSER }}/new-app:latest
+          docker pull ${{ secrets.DOCKERUSER }}/react-new:latest
           docker image prune -f || true
           docker run -d -p 3000:3000 ${{ secrets.DOCKERUSER }}/new-app:latest
           echo "deploy successful"
