--- a/.github/workflows/prod_main.yml
+++ b/.github/workflows/prod_main.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths-ignore:
       - "README.md"
-      - ".github/workflows/prod_main.yml"
+      - ".github/workflows/**"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -48,8 +48,8 @@ jobs:
         password: ${{ secrets.DOCKERPASS }}
     - name: push to docker hub
       run: |
-        docker build -t ${{ secrets.DOCKERUSER }}/react-new:latest .
-        docker push ${{ secrets.DOCKERUSER }}/react-new:latest
+        docker build -t ${{ secrets.DOCKERUSER }}/react-new-prod:latest .
+        docker push ${{ secrets.DOCKERUSER }}/react-new-prod:latest
         
   deploy:
     runs-on: ubuntu-latest
@@ -63,7 +63,7 @@ jobs:
         key: ${{ secrets.AWS_PEM_KEY }}
         script: |
           docker rm -f $(docker ps -aq) || true
-          docker pull ${{ secrets.DOCKERUSER }}/react-new:latest
+          docker pull ${{ secrets.DOCKERUSER }}/react-new-prod:latest
           docker image prune -f || true
-          docker run -d -p 3000:3000 ${{ secrets.DOCKERUSER }}/new-app:latest
+          docker run -d -p 3000:3000 ${{ secrets.DOCKERUSER }}/new-app-prod:latest
           echo "deploy successful"
